--- a/resources/sass/object/component/c-login.scss
+++ b/resources/sass/object/component/c-login.scss
@@ -1,10 +1,11 @@
-.c-login__input {
-  border-bottom: 2px solid $theme_gray_word_bottom;
-}
-
-.c-login__container {
-  width: 400px;
-  @include mq() {
-    width: 80%;
+.c-login {
+  &__input {
+    border-bottom: 2px solid $theme_gray_word_bottom;
+  }
+  &__container {
+    width: 400px;
+    @include mq() {
+      width: 80%;
+    }
   }
 }
