--- a/resources/sass/object/component/c-auth.scss
+++ b/resources/sass/object/component/c-auth.scss
@@ -1,189 +1,178 @@
-.c-auth__container {
-  margin: $space_5l auto;
-  overflow: hidden;
-}
-
-.c-auth__item {
-  display: flex;
-  justify-content: space-between;
-  @include mq() {
-    height: 40px;
-    margin-bottom: $space_l;
+.c-auth{
+  &__container {
+    margin: $space_5l auto;
+    overflow: hidden;
   }
-}
-.c-auth__item-for-select{
-  @include mq(){
-    display: block;
-    margin-bottom: $space_m;
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    @include mq() {
+      height: 40px;
+      margin-bottom: $space_l;
+    }
   }
-}
-
-.c-auth__warning {
-  background: $theme_red;
-  border-radius: 5px;
-  color: $theme_white;
-  font-size: $font_s;
-  height: $space_2l;
-  line-height: $space_2l;
-  margin: $space_l 0;
-  padding: 3px;
-  text-align: center;
-  width: $space_5l;
-  @include mq() {
-    border-radius: 0;
-    display: block;
-    font-size: $font_sp-s;
-    margin: $space_l $space_m 0 0;
-    padding: 1px;
-    width: 30px;
+  &__item-for-select{
+    @include mq(){
+      display: block;
+      margin-bottom: $space_m;
+    }
   }
-}
-
-.c-auth__warning-for-select {
-  float: left;
-  margin: $space_l $space_m 0 0;
-  width: 51px;
-  @include mq(){
-    margin: 12px 10px 0 0;
-    width: 26px;
-  }
-}
-
-.c-auth__input {
-  border: none;
-  background: $theme_gray_background;
-  color: $theme_dark_gray;
-  font-size: $font_m;
-  padding: $space_l 0;
-  width: 400px;
-  -webkit-border-radius: 0px;
-  @include mq() {
-    font-size: $font_sp-s;
-    padding: 18px 0 $space_s $space_m;
-    width: 100%;
-  }
-  &:focus {
-    outline: none;
-  }
-}
-
-.c-auth__input::-moz-placeholder {
-   color: black;
- }
-.c-auth__input::-webkit-placeholder {
-   color: $theme_gray;
- }
-
-.c-auth__btn {
-  border-radius: 0;
-  background: $theme_yellow;
-  border: none;
-  color: $theme_white;
-  cursor: pointer;
-  display: inline-block;
-  font-size: $font_m;
-  float: right;
-  margin: $space_2l $space_m 0 0;
-  padding: $space_s $space_m;
-  width: 100px;
-  height: $space_4l;
-  -webkit-appearance: none;
-  @include mq() {
+  &__warning {
+    background: $theme_red;
+    border-radius: 5px;
+    color: $theme_white;
     font-size: $font_s;
-    float: none;
-    margin: 0 auto;
-    width: 100%;
+    height: $space_2l;
+    line-height: $space_2l;
+    margin: $space_l 0;
+    padding: 3px;
+    text-align: center;
+    width: $space_5l;
+    @include mq() {
+      border-radius: 0;
+      display: block;
+      font-size: $font_sp-s;
+      margin: $space_l $space_m 0 0;
+      padding: 1px;
+      width: 30px;
+    }
   }
-  &:hover {
-    background: lighten($theme_yellow, 1%);
+  &__warning-for-select {
+    float: left;
+    margin: $space_l $space_m 0 0;
+    width: 51px;
+    @include mq(){
+      margin: 12px 10px 0 0;
+      width: 26px;
+    }
   }
-  &:active {
+  &__input {
+    border: none;
+    background: $theme_gray_background;
+    color: $theme_dark_gray;
+    font-size: $font_m;
+    padding: $space_l 0;
+    width: 400px;
+    -webkit-border-radius: 0px;
+    @include mq() {
+      font-size: $font_sp-s;
+      padding: 18px 0 $space_s $space_m;
+      width: 100%;
+    }
+    &:focus {
+      outline: none;
+    }
+    &::-moz-placeholder {
+      color: black;
+    }
+    &::-webkit-placeholder {
+      color: $theme_gray;
+    }
+  }
+  &__btn {
+    border-radius: 0;
     background: $theme_yellow;
-    box-shadow: inset 0px 1px 1px fadeout($theme_black, 90%);
+    border: none;
+    color: $theme_white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: $font_m;
+    float: right;
+    margin: $space_2l $space_m 0 0;
+    padding: $space_s $space_m;
+    width: 100px;
+    height: $space_4l;
+    -webkit-appearance: none;
+    @include mq() {
+      font-size: $font_s;
+      float: none;
+      margin: 0 auto;
+      width: 100%;
+    }
+    &:hover {
+      background: lighten($theme_yellow, 1%);
+    }
+    &:active {
+      background: $theme_yellow;
+      box-shadow: inset 0px 1px 1px fadeout($theme_black, 90%);
+    }
+    &:focus {
+      outline: none;
+    }
   }
-  &:focus {
+  &--error {
+    color: $theme_red;
+    @include mq() {
+      display: block;
+    }
+  }
+  &__select-box {
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 3px solid #eaeaea;
+    font-size: $font_m;
+    margin: 0 250px 0 0;
     outline: none;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    width: 150px;
+    @include mq() {
+      margin: 0;
+      width: 100px;
+    }
   }
-}
-
-.c-auth--error {
-  color: $theme_red;
-  @include mq() {
-    display: block;
+  &__select-box select {
+    appearance: none;
+    background: $theme_gray_background;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+    font-size: $font_m;
+    outline: none;
+    padding: 17px $space_3l 0 0;
+    -webkit-appearance: none;
+    width: 150px;
+    @include mq() {
+      padding: $space_2l 0 3px $space_m;
+      font-size: $font_sp-s;
+      width: 100px;
+    }
   }
-}
-
-.c-auth__select-box {
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 3px solid #eaeaea;
-  font-size: $font_m;
-  margin: 0 250px 0 0;
-  outline: none;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  width: 150px;
-  @include mq() {
-    margin: 0;
-    width: 100px;
-  }
-}
-
-
-.c-auth__select-box select {
-  appearance: none;
-  background: $theme_gray_background;
-	border: none;
-  box-shadow: none;
-  cursor: pointer;
-  font-size: $font_m;
-	outline: none;
-  padding: 17px $space_3l 0 0;
-  -webkit-appearance: none;
-  width: 150px;
-  @include mq() {
-    padding: $space_2l 0 3px $space_m;
-    font-size: $font_sp-s;
-    width: 100px;
-  }
-}
-
-.c-auth__select-box select::-ms-expand {
+  &__select-box select::-ms-expand {
     display: none;
-}
-
-.c-auth__select-box:before {
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid $theme_dark_gray;
-  color: $theme_dark_gray;
-  content: '';
-  height: 0;
-  position: absolute;
-	padding: 0;
-  pointer-events: none;
-  right: 35px;
-  top: 30px;
-  width: 0;
-  pointer-events: none;
-  @include mq() {
-    right: 20px;
-    top: 25px;
   }
-}
-
-.c-auth__ask {
-  color: $theme_gray;
-  display: block;
-  padding: 0 $space_s $space_l;
-  transition: .3s;
-  text-decoration: none;
-  @include mq() {
-    font-size: $font_sp-m;
+  &__select-box:before {
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid $theme_dark_gray;
+    color: $theme_dark_gray;
+    content: '';
+    height: 0;
+    position: absolute;
+    padding: 0;
+    pointer-events: none;
+    right: 35px;
+    top: 30px;
+    width: 0;
+    pointer-events: none;
+    @include mq() {
+      right: 20px;
+      top: 25px;
+    }
   }
-}
-.c-auth__ask:hover {
-  color: $theme_yellow;
-  transition: .3s;
+  &__ask {
+    color: $theme_gray;
+    display: block;
+    padding: 0 $space_s $space_l;
+    transition: .3s;
+    text-decoration: none;
+    @include mq() {
+      font-size: $font_sp-m;
+    }
+    &:hover {
+      color: $theme_yellow;
+      transition: .3s;
+    }
+  }
 }
