--- a/resources/sass/object/project/p-sub-head-modal.scss
+++ b/resources/sass/object/project/p-sub-head-modal.scss
@@ -1,49 +1,47 @@
-.p-sub-head-modal__container {
-  background: $theme_black;
-  height: $space_7l;
-  overflow: hidden;
-}
-
-.p-sub-head-modal__bar {
-  float: right;
-  list-style: none;
-  overflow: hidden;
-  display: flex;
-  @include mq(){
-    float: none;
-    justify-content: space-around;
+.p-sub-head-modal{
+  &__container {
+    background: $theme_black;
+    height: $space_7l;
+    overflow: hidden;
   }
-}
-
-.p-sub-head-modal__box {
-  float: left;
-  line-height: $space_7l;
-  margin-right: $space_10l;
-  &:hover {
+  &__bar {
+    float: right;
+    list-style: none;
+    overflow: hidden;
+    display: flex;
+    @include mq(){
+      float: none;
+      justify-content: space-around;
+    }
+  }
+  &__box {
+    float: left;
+    line-height: $space_7l;
+    margin-right: $space_10l;
+    &:hover {
+      transition: .4s;
+      opacity: .8;
+    }
+    @include mq(){
+      margin-right: 0px;
+    }
+  }
+  &__title {
+    color: $theme_white;
+    font-size: $font_m;
+    padding-right: $space_2l;
+    text-decoration: none;
     transition: .4s;
-    opacity: .8;
+    @include mq(){
+      font-size: $font_s;
+      padding-right: 1px;
+    }
   }
-  @include mq(){
-    margin-right: 0px;
-  }
-}
-
-.p-sub-head-modal__title {
-  color: $theme_white;
-  font-size: $font_m;
-  padding-right: $space_2l;
-  text-decoration: none;
-  transition: .4s;
-  @include mq(){
-    font-size: $font_s;
-    padding-right: 1px;
-  }
-}
-
-.p-sub-head-modal__logo {
-  color: $theme_white;
-  font-size: $font_m;
-  @include mq(){
-    font-size: $font_s;
+  &__logo {
+    color: $theme_white;
+    font-size: $font_m;
+    @include mq(){
+      font-size: $font_s;
+    }
   }
 }
